# utopiactl

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  ansible_vars.go  configure.go  copy_vars.go  customize.go  jinja2.go  jinja2_test.go  main.go  main_test.go  makefile.go  prerender.go  render.go  repos.go  utopia.go  vars.go  walk_config.go
.circleci/: config.yml
cmd/utopia/: main.go  main_test.go
cmd/utopia/testdata/golden/customized/: Makefile
cmd/utopiactl/: main.go
pkg/: action.go  ansible_vars_test.go  autogenerate_config.go  autogenerate_config_test.go  compare_versions.go  config_walker.go  configure.go  dependencies.go  deploy.go  exec.go  exec_test.go  jinja2.go  jinja2_test.go  makefile.go  makefile_test.go  vars.go  verify_tests.go  verify_tests_test.go
pkg/testdata/autogenerate_configs/ansible/group_vars/: all.yaml
pkg/testdata/autogenerate_configs/golden/repo2/: variable
pkg/testdata/makefile/: Makefile.golden
pkg/testdata/makefile-empty/: Makefile.golden
pkg/testdata/makefile/configurations/service-repo2/: template
pkg/testdata/verify_tests/services/make-tests-fail/: Makefile
pkg/utopia/: BUILD.bazel  ansible_vars.go  ansible_vars_test.go  autogenerate_config.go  customize.go  exec_test.go  jinja2.go  jinja2_test.go  makefile.go  makefile_test.go
pkg/utopia/testdata/autogenerate_configs/services/repo2/config-templates/: static
pkg/utopia/testdata/makefile/services/service-repo4/config-templates/: template.j2
testdata/: inventory  jinja.golden  jinja.input
testdata/golden/: Makefile
testdata/services/service-repo2/: Makefile
(+5 files in other folders)
